--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,7 @@
 /* General Styles */
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f7f7f7;
+    font-family: 'Poppins', sans-serif;
+    background-color: #A3C1AD; /* Crème doux */
     margin: 0;
     padding: 20px;
 }
@@ -9,25 +9,22 @@ body {
 h1 {
     text-align: center;
     margin-bottom: 20px;
+    color: #7A7D7D; /* Gris ardoise */
 }
 
-#search-bar {
+div {
+    margin-bottom: 20px; /* Ajoute 20px d'espace sous chaque div */
+}
+
+/* Barre de recherche (attractions et restaurants) */
+#search-bar-attractions, #search-bar-restaurants {
     padding: 10px;
     width: 100%;
     border-radius: 8px;
     border: 1px solid #ccc;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 15px;
-}
-
-#activities-list {
-    height: 300px;
-    overflow-y: auto;
-    border: 1px solid #ddd;
-    padding: 15px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
+    color: #fff; /* Make the text stand out */
 }
 
 /* Layout container */
@@ -38,28 +35,27 @@ h1 {
     height: 100vh; /* Full viewport height */
 }
 
-.left-section {
-    width: 35%;
-    padding: 20px;
-    overflow-y: auto;
-}
-
-.right-section {
-    width: 65%;
-    padding: 10px;
-}
 
 /* Day blocks and activity items */
 .day-container {
-    background-color: #fafafa;
+    /*background-color: #F4E3C1;*/
     padding: 15px;
     margin-right: 15px;
-    border: 1px solid #ddd;
+    border: 4px solid #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     min-width: 200px;
 }
+
+.day-container .activity-list {
+    /* Ajoute ici les styles que tu veux appliquer à activity-list */
+    background-color: #F4E3C1;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+
 
 .day-title {
     font-weight: bold;
@@ -80,7 +76,7 @@ h1 {
 .activity-item {
     margin: 5px 0;
     padding: 12px;
-    background-color: #f9f9f9;
+    background-color: #F4E3C1;
     border: 1px solid #ddd;
     border-radius: 8px;
     text-align: center;
@@ -91,8 +87,14 @@ h1 {
     transition: transform 0.3s, background-color 0.3s;
 }
 
+#bonnes-adresses-list .activity-item {
+    background-color: #F4E3C1;
+}
+
+
 .activity-item:hover {
-    background-color: #e9e9e9;
+    background-color: #A3C1AD; /* Change la couleur au survol, ici couleur vert amande */
+    color: #333; /* Change la couleur du texte au survol */
     transform: scale(1.02);
 }
 
@@ -107,7 +109,7 @@ h1 {
 
 /* Carousel buttons */
 .nav-button {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: #7A7D7D; /* Gris ardoise */
     color: #fff;
     border-radius: 50%;
     width: 30px;
@@ -117,11 +119,14 @@ h1 {
     justify-content: center;
     cursor: pointer;
     border: none;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
     transition: background-color 0.3s;
 }
 
 .nav-button:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: #85A6C8; /* Bleu clair */
 }
 
 .nav-button.left {
@@ -132,60 +137,6 @@ h1 {
     right: -15px;
 }
 
-
-.modern-pin .pin-wrapper {
-    position: relative;
-    display: inline-block;
-}
-
-.modern-pin .pin-body {
-    width: 20px;
-    height: 30px;
-    background-color: #3498db; /* Change to your desired color */
-    border-radius: 50% 50% 0 0;
-    position: relative;
-    z-index: 2;
-    transform: rotate(45deg);
-}
-
-.modern-pin .pin-tip {
-    width: 10px;
-    height: 10px;
-    background-color: #3498db;
-    position: absolute;
-    bottom: -5px;
-    left: 5px;
-    border-radius: 50%;
-    z-index: 1;
-}
-
-
-/* Custom pin styling */
-.modern-pin .pin-wrapper {
-    position: relative;
-    display: inline-block;
-}
-
-.modern-pin .pin-body {
-    width: 20px;
-    height: 30px;
-    background-color: #3498db; /* You can customize this color */
-    border-radius: 50% 50% 0 0;
-    position: relative;
-    z-index: 2;
-    transform: rotate(45deg);
-}
-
-.modern-pin .pin-tip {
-    width: 10px;
-    height: 10px;
-    background-color: #3498db; /* Same as the pin body */
-    position: absolute;
-    bottom: -5px;
-    left: 5px;
-    border-radius: 50%;
-    z-index: 1;
-}
 
 /* Container pour le slider */
 .carousel-container {
@@ -203,10 +154,30 @@ h1 {
     width: 100%;
 }
 
+.modern-pin .pin-wrapper, .custom-pin .pin-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+
+.modern-pin .pin-tip, .custom-pin .pin-tip {
+    width: 10px;
+    height: 10px;
+    background-color: #3498db;
+    position: absolute;
+    bottom: -5px;
+    left: 5px;
+    border-radius: 50%;
+    z-index: 1;
+    transform: rotate(45deg);
+
+}
+
+
 .day-container {
     flex: 0 0 250px;
     margin-right: 10px;
-    background-color: #f4f4f4;
+    /* background-color: #3498db; */
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -226,18 +197,6 @@ h1 {
     background-color: #fafafa;
 }
 
-/* Boutons de navigation */
-.nav-button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    z-index: 10;
-}
 
 .nav-button.left {
     left: 0;
@@ -271,4 +230,133 @@ h1 {
     border-style: solid;
     border-color: #FF0000 transparent transparent transparent;
     transform: translateX(-50%);
+}
+
+
+/* Layout container */
+.layout-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 100vh; /* Full viewport height */
+}
+
+.left-section, .right-section {
+    padding: 20px;
+    overflow-y: auto;
+}
+
+.left-section {
+    width: 35%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.right-section {
+    /* background-color: #A3C1AD; /* Vert amande */
+    width: 65%;
+    padding: 10px; /* Si la padding diffère, conservez cette ligne */
+}
+
+
+/* Map container styling */
+#map {
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Media query for mobile devices */
+@media screen and (max-width: 768px) {
+    .layout-container {
+        flex-direction: column-reverse; /* Display the map on top */
+    }
+
+    .left-section, .right-section {
+        width: 100%; /* Make both sections full width */
+        padding: 10px;
+    }
+
+    #map {
+        height: 300px; /* Adjust map height for mobile */
+    }
+}
+
+.activity-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    /*background-color: #F4E3C1; */
+
+}
+
+.activity-section, #bonnes-adresses-list {
+    width: 48%;
+    border: 1px solid #ddd;
+    min-height: 400px;
+    /*background-color: #85A6C8; /* Bleu clair */
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: #fff;
+
+}
+
+#bonnes-adresses-list {
+    /* background-color: #e0f7fa; */
+    border-color: #ccc;
+    overflow-y: auto;
+}
+
+
+
+/* Adjusting both the activity list and wishlist heights */
+#activities-list, #wishlist, #bonnes-adresses-list {
+    height: 250px; /* Reduced height */
+    overflow-y: auto;
+    border: 1px solid #ddd;
+    padding: 15px;
+    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    background-color: #F4E3C1;*/
+    color: #fff;
+
+
+}
+
+
+#wishlist {
+    border: 2px solid #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /*background-color: #F4E3C1;*/
+
+}
+
+.activity-title {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+    color: #FFF;
+    /* background-color: #A3C1AD; /* Terracotta */
+
+}
+
+
+/* Conteneur pour aligner les deux barres de recherche côte à côte */
+.search-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 20px; /* Espacement sous les barres de recherche */
+}
+
+/* Style pour chaque barre de recherche */
+.search-bar {
+    width: 48%; /* Les deux barres prennent 48% de l'espace chacune */
+}
+
+.activity-container {
+    height: 300px; /* Définit la hauteur à 300px, ajuste selon tes besoins */
+    overflow-y: auto; /* Ajoute un défilement vertical si le contenu dépasse la hauteur */
 }
