--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -241,6 +241,11 @@ div {
     height: 100vh; /* Full viewport height */
 }
 
+.left-section,
+.right-section {
+    flex: 1;
+}
+
 .left-section, .right-section {
     padding: 20px;
     overflow-y: auto;
