--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,78 +1,118 @@
-/* General Styles */
+/* Réinitialisation des marges et des paddings */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Styles généraux */
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #A3C1AD; /* Crème doux */
-    margin: 0;
-    padding: 20px;
 }
 
 h1 {
     text-align: center;
-    margin-bottom: 20px;
+    margin: 20px 0;
     color: #7A7D7D; /* Gris ardoise */
 }
 
-div {
-    margin-bottom: 20px; /* Ajoute 20px d'espace sous chaque div */
+/* Conteneur principal */
+.layout-container {
+    display: flex;
+    width: 100%;
+    height: 100vh; /* Hauteur de la fenêtre */
 }
 
-/* Barre de recherche (attractions et restaurants) */
-#search-bar-attractions, #search-bar-restaurants {
+/* Sections gauche et droite */
+.left-section {
+    flex: 0 0 35%;
+    padding: 20px;
+    overflow-y: auto;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+
+.right-section {
+    flex: 0 0 65%;
+    padding: 10px;
+    overflow-y: auto;
+    position: relative;
+}
+
+/* Conteneur défilable horizontalement */
+.scrollable-container {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+/* Conteneur pour chaque liste */
+.list-container {
+    flex: 0 0 40%;
+    padding: 10px;
+}
+
+/* Barre de recherche */
+.search-container {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.search-container .search-bar {
+    width: 48%;
+}
+
+.search-bar {
     padding: 10px;
     width: 100%;
     border-radius: 8px;
-    border: 0px solid #ccc;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border: none;
     margin-bottom: 15px;
-    color: #fff; /* Make the text stand out */
+    color: #fff;
+    background-color: #ffffff; /* Couleur de fond pour contraster avec le texte */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-/* Layout container */
-.layout-container {
+/* Conteneur des activités */
+.activity-container {
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 100vh; /* Full viewport height */
+    gap: 20px;
+    overflow-y: auto;
 }
 
-
-/* Day blocks and activity items */
-.day-container {
-    /*background-color: #F4E3C1;*/
-    padding: 15px;
-    margin-right: 15px;
-    border: 4px solid #fff;
+/* Sections d'activités */
+.activity-section {
+    width: 100%;
+    min-height: 400px;
+    padding: 10px;
+    border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    min-width: 200px;
+    color: #fff;
+    overflow-y: auto;
 }
 
-.day-container .activity-list {
-    /* Ajoute ici les styles que tu veux appliquer à activity-list */
-    background-color: #F4E3C1;
-    padding: 10px;
-    border-radius: 5px;
-}
-
-
-
-.day-title {
-    font-weight: bold;
-    color: #333;
+.activity-title {
+    font-size: 1.5em;
     margin-bottom: 10px;
-    font-size: 18px;
+    color: #FFF;
 }
 
+/* Liste des activités */
 .activity-list {
     min-height: 150px;
-    border: none; /*0px dashed #ccc;*/
     padding: 10px;
-    background-color: #fff;
+    background-color: #fafafa;
     border-radius: 8px;
     overflow-y: auto;
 }
 
+/* Élément d'activité */
 .activity-item {
     margin: 5px 0;
     padding: 12px;
@@ -83,45 +123,50 @@ div {
     font-size: 14px;
     color: #333;
     cursor: move;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, background-color 0.3s;
+}
+
+.activity-item:hover {
+    background-color: #A3C1AD; /* Vert amande au survol */
+    transform: scale(1.02);
 }
 
 #bonnes-adresses-list .activity-item {
     background-color: #F4E3C1;
 }
 
-
-.activity-item:hover {
-    background-color: #A3C1AD; /* Change la couleur au survol, ici couleur vert amande */
-    color: #333; /* Change la couleur du texte au survol */
-    transform: scale(1.02);
+/* Wishlist */
+#wishlist {
+    height: 250px;
+    overflow-y: auto;
+    border: 2px solid #fff;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: #fff;
 }
 
-/* Map container styling */
+/* Carte */
 #map {
     width: 100%;
     height: 100%;
-    margin-top: 20px;
-    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Carousel buttons */
+/* Boutons de navigation */
 .nav-button {
-    background-color: #7A7D7D; /* Gris ardoise */
-    color: #fff;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    border: none;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+    background-color: #7A7D7D; /* Gris ardoise */
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 1;
     transition: background-color 0.3s;
 }
 
@@ -137,15 +182,14 @@ div {
     right: -15px;
 }
 
-
-/* Container pour le slider */
+/* Conteneur du carrousel */
 .carousel-container {
     position: relative;
     width: 100%;
     overflow: hidden;
 }
 
-/* Itinerary container en mode slider */
+/* Itinéraire */
 #itinerary {
     display: flex;
     flex-wrap: nowrap;
@@ -154,123 +198,99 @@ div {
     width: 100%;
 }
 
-.modern-pin .pin-wrapper, .custom-pin .pin-wrapper {
-    position: relative;
-    display: inline-block;
-}
-
-
-.modern-pin .pin-tip, .custom-pin .pin-tip {
-    width: 10px;
-    height: 10px;
-    background-color: #3498db;
-    position: absolute;
-    bottom: -5px;
-    left: 5px;
-    border-radius: 50%;
-    z-index: 1;
-    transform: rotate(45deg);
-
-}
-
-
+/* Conteneur pour chaque jour */
 .day-container {
     flex: 0 0 250px;
     margin-right: 10px;
-    /* background-color: #3498db; */
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .day-title {
     font-weight: bold;
     margin-bottom: 10px;
+    font-size: 18px;
+    color: #333;
 }
 
-.activity-list {
-    min-height: 150px;
-    border: 2px dashed #ccc;
-    padding: 10px;
-    background-color: #fafafa;
-}
-
-
-.nav-button.left {
-    left: 0;
-}
-
-.nav-button.right {
-    right: 0;
-}
-
-
-/* Styles pour le pin moderne */
-.modern-pin .pin-wrapper {
+/* Styles pour les pins modernes */
+.modern-pin .pin-wrapper,
+.custom-pin .pin-wrapper {
     position: relative;
-    width: 30px;
-    height: 42px;
+    display: inline-block;
 }
+
 .modern-pin .pin-body {
     background-color: #FF0000;
-    width: 100%;
-    height: 100%;
+    width: 30px;
+    height: 42px;
     border-radius: 15px;
     border: 2px solid black;
 }
-.modern-pin .pin-tip {
+
+.modern-pin .pin-tip,
+.custom-pin .pin-tip {
     position: absolute;
-    bottom: 0;
+    bottom: -5px;
     left: 50%;
-    width: 0;
-    height: 0;
-    border-width: 10px;
-    border-style: solid;
-    border-color: #FF0000 transparent transparent transparent;
-    transform: translateX(-50%);
+    width: 10px;
+    height: 10px;
+    background-color: #3498db;
+    border-radius: 50%;
+    transform: translateX(-50%) rotate(45deg);
+    z-index: 1;
 }
 
-
-/* Layout container */
-.layout-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 100vh; /* Full viewport height */
-}
-
-.left-section,
-.right-section {
-    flex: 1;
-}
-
-.left-section, .right-section {
-    padding: 20px;
-    overflow-y: auto;
-}
-
-.left-section {
-    width: 35%;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.right-section {
-    /* background-color: #A3C1AD; /* Vert amande */
-    width: 65%;
-    padding: 10px; /* Si la padding diffère, conservez cette ligne */
-}
-
-
-/* Map container styling */
-#map {
-    width: 100%;
-    height: 100%;
-    margin-top: 20px;
+/* Styles pour les pop-ups Leaflet */
+.leaflet-popup-content-wrapper {
+    background-color: #F4E3C1; /* Terracotta */
+    color: #000;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 2px solid #fff;
+    font-family: 'Poppins', sans-serif;
 }
+
+.leaflet-popup-tip {
+    background-color: #E2725B; /* Couleur de la petite flèche */
+    border: 2px solid #fff;
+}
+
+/* Media query pour les appareils mobiles */
+@media screen and (max-width: 768px) {
+    .layout-container {
+        flex-direction: column-reverse; /* Affiche la carte en haut */
+    }
+
+    .left-section,
+    .right-section {
+        flex: 0 0 100%;
+        padding: 10px;
+    }
+
+    #map {
+        height: 300px; /* Ajuste la hauteur de la carte pour mobile */
+    }
+
+    .search-container .search-bar {
+        width: 100%;
+    }
+}
+
+/* Ajustements pour les éléments spécifiques */
+#activities-list,
+#wishlist,
+#bonnes-adresses-list {
+    height: 250px;
+    overflow-y: auto;
+    border: 1px solid #ddd;
+    padding: 15px;
+    color: #fff;
+}
+
+
 
 /* Media query for mobile devices */
 @media screen and (max-width: 768px) {
@@ -286,99 +306,4 @@ div {
     #map {
         height: 300px; /* Adjust map height for mobile */
     }
-}
-
-.activity-container {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    /*background-color: #F4E3C1; */
-
-}
-
-.activity-section, #bonnes-adresses-list {
-    width: 48%;
-    border: 1px solid #ddd;
-    min-height: 400px;
-    /*background-color: #85A6C8; /* Bleu clair */
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    color: #fff;
-
-}
-
-#bonnes-adresses-list {
-    /* background-color: #e0f7fa; */
-    border-color: #ccc;
-    overflow-y: auto;
-}
-
-
-
-/* Adjusting both the activity list and wishlist heights */
-#activities-list, #wishlist, #bonnes-adresses-list {
-    height: 250px; /* Reduced height */
-    overflow-y: auto;
-    border: 1px solid #ddd;
-    padding: 15px;
-    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    background-color: #F4E3C1;*/
-    color: #fff;
-
-
-}
-
-
-#wishlist {
-    border: 2px solid #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    /*background-color: #F4E3C1;*/
-
-}
-
-.activity-title {
-    font-size: 1.5em;
-    margin-bottom: 10px;
-    color: #FFF;
-    /* background-color: #A3C1AD; /* Terracotta */
-
-}
-
-
-/* Conteneur pour aligner les deux barres de recherche côte à côte */
-.search-container {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    margin-bottom: 20px; /* Espacement sous les barres de recherche */
-}
-
-/* Style pour chaque barre de recherche */
-.search-bar {
-    width: 48%; /* Les deux barres prennent 48% de l'espace chacune */
-}
-
-.activity-container {
-    height: 300px; /* Définit la hauteur à 300px, ajuste selon tes besoins */
-    overflow-y: auto; /* Ajoute un défilement vertical si le contenu dépasse la hauteur */
-}
-
-
-.leaflet-popup-content-wrapper {
-    background-color: #F4E3C1; /* Couleur de fond Terracotta */
-    color: #000000; /* Couleur du texte */
-    border-radius: 10px; /* Ajoute des coins arrondis */
-    border: 2px solid #ffffff;
-
-    font-family: 'Poppins', sans-serif;
-
-}
-
-.leaflet-popup-tip {
-    background-color: #E2725B; /* Change également la couleur de la petite flèche */
-    border: 2px solid #ffffff;
-
 }
