--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -26,7 +26,7 @@ h1 {
 
 /* Sections gauche et droite */
 .left-section {
-    flex: 0 0 35%;
+    flex: 0 0 50%; /* Modifié pour prendre la moitié de la page */
     padding: 20px;
     overflow-y: auto;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -34,7 +34,7 @@ h1 {
 }
 
 .right-section {
-    flex: 0 0 65%;
+    flex: 0 0 50%; /* Ajusté pour correspondre à la nouvelle largeur de la section gauche */
     padding: 10px;
     overflow-y: auto;
     position: relative;
@@ -131,10 +131,6 @@ h1 {
     transform: scale(1.02);
 }
 
-#bonnes-adresses-list .activity-item {
-    background-color: #F4E3C1;
-}
-
 /* Wishlist */
 #wishlist {
     height: 250px;
@@ -144,6 +140,7 @@ h1 {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     color: #fff;
+    margin-bottom: 20px; /* Ajouté pour plus d'espace sous la wishlist */
 }
 
 /* Carte */
@@ -207,6 +204,7 @@ h1 {
     border-radius: 5px;
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-top: 20px; /* Ajouté pour plus d'espace au-dessus des day */
 }
 
 .day-title {
@@ -282,15 +280,15 @@ h1 {
 /* Ajustements pour les éléments spécifiques */
 #activities-list,
 #wishlist,
-#bonnes-adresses-list {
+#bonnes-adresses-list,
+#streets-list {
     height: 250px;
     overflow-y: auto;
     border: 1px solid #ddd;
     padding: 15px;
     color: #fff;
+    margin-bottom: 20px; /* Ajouté pour plus d'espace entre les blocs */
 }
-
-
 
 /* Media query for mobile devices */
 @media screen and (max-width: 768px) {
@@ -298,7 +296,8 @@ h1 {
         flex-direction: column-reverse; /* Display the map on top */
     }
 
-    .left-section, .right-section {
+    .left-section,
+    .right-section {
         width: 100%; /* Make both sections full width */
         padding: 10px;
     }
