--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -93,7 +93,6 @@ h1 {
     border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    color: #fff;
     overflow-y: auto;
 }
 
@@ -107,7 +106,6 @@ h1 {
 .activity-list {
     min-height: 150px;
     padding: 10px;
-    background-color: #fafafa;
     border-radius: 8px;
     overflow-y: auto;
 }
@@ -205,6 +203,7 @@ h1 {
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-top: 20px; /* Ajouté pour plus d'espace au-dessus des day */
+    
 }
 
 .day-title {
@@ -249,6 +248,8 @@ h1 {
     border-radius: 10px;
     border: 2px solid #fff;
     font-family: 'Poppins', sans-serif;
+    margin-bottom: 10px;
+    
 }
 
 .leaflet-popup-tip {
